Somehow fix the issue with bad readability of text on small devices

--- a/src/styles/components/page/header.scss
+++ b/src/styles/components/page/header.scss
@@ -116,6 +116,10 @@
     @include onMobile {
       transform: translateX(120px);
     }
+
+    @media (max-width: 440px) {
+      transform: translateX(200px);
+    }
   }
 
   &__img {
